fix too much margin

--- a/src/ui/animation-pane/src/css/index.css
+++ b/src/ui/animation-pane/src/css/index.css
@@ -93,3 +93,7 @@ button img {
   height: 30px;
   width: 30px;
 }
+
+.form-group {
+  margin-bottom: 0;
+}
